# akiku

./: Cargo.toml
.cursor/rules/: rust.mdc
benches/: simulation_bench.rs
examples/: config.yaml  logic_gate.rs  mini_cache.rs  simple_config.yaml
spec/: devplan.md  sim_framework_spec.md
src/: channel.rs  config.rs  engine.rs  event.rs  lib.rs  node.rs  parallel.rs  registry.rs  stats.rs  subgraph.rs  types.rs
src/executor/: event.rs  mod.rs  tick.rs
src/nodes/: delay.rs  mock.rs  mod.rs  passthrough.rs  pipeline.rs  probabilistic.rs
tests/: alignment.rs  event_executor.rs  integration.rs  nodes_test.rs  tick_executor.rs
